# NeuroPy

./: .gitignore  .readthedocs.yaml  CITATION.cff  PhoLoadBapun.py  ProcessData.py  README.md  Untitled.ipynb  UsingModules.ipynb  environment.yml  environment_beta.yml  opto_env.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  test.py
.dvc/: config
ModulesPath/: DLC_IO.py  MakePrmKlusta.py  __init__.py  artifactDetect.py  behavior.py  callfunc.py  ccg.py  decoders.py  eventCorr.py  figPublish  getPosition.py  getSpikes.py  lfpEvent.py  mathutil.py  movie.py  ms_connectivity.py  parsePath.py  pfPlot.py  plotUtil.py  polycoherence.py  proc_data.py  process_data.py  readOpenEphys.py  replay.py  sessionUtil.py  signal_process.py  sleepDetect.py  spkEvent.py  trace_fc.py  track.py  viewerData.py  waveletFunctions.py
docs_sphinx/: ModulesPath.rst  conf.py  modules.rst
examples/: CCG_cupy_verification.ipynb  CCG_cython_development.ipynb  CCG_development.ipynb  CCG_test.ipynb  Cython_testing.ipynb  Data Preprocessing.ipynb  Data Preprocessing.ipynb.orig  Gen_example_PVplots.py  MS_connectivity_development.ipynb  PhoLoadBapun.py  Placefield Analysis.ipynb  Placefield_analysis.ipynb  USV_analysis.ipynb  Widget Test.ipynb  Widget test.ipynb  decoding_analysis.ipynb  decoding_analysis.ipynb.orig  example_session.ipynb  first_run.ipynb  first_use.md  for_pho.ipynb  setup.py
neuropy/: __init__.py  movie.py  proc_data.py  requirements.txt  track.py
notebooks/: AccuSleePy_preprocess.ipynb  Analyze_USV_data.ipynb  Animal_preprocessing.ipynb  Artifact_and_epoch_detection.ipynb  Curate_SWRs.ipynb  Dat_artifact_identify.ipynb  Data_align_Miniscope_to_OpenEphys.ipynb  Data_align_Motive_to_OpenEphys.ipynb  Data_alignment_tests.ipynb  Epoch_detection.ipynb  Image_ephys_dlc_alignment.ipynb  Imaging_development.ipynb  Miniscope_Denoise.ipynb  Miniscope_notch_filter_example.ipynb  Notch_filtering_template.ipynb  Notebook_initilization_code.ipynb  Register_Cells_Manual.ipynb  Register_Cells_Manual_archive.ipynb  Sleepstate_detection.ipynb  peak_detection.ipynb  unit_testing.ipynb  weighted_correlation_exploration.ipynb
tests/: .gitignore  PositionTestingVariables.npz.dvc  Unit_Tests_Beta.ipynb  epoch_slices_df.csv.dvc  epoch_slices_df.h5.dvc  gen_simulated_data.py  neuropy_epochs_testing.h5.dvc  neuropy_pf_testing.h5.dvc  test_contexts.py  test_epochs.py  test_indexing_helpers.py  test_parameters-neuropy_bayesian_prob.npz.dvc  test_spikes.py  (+7 more)
(+341 files in other folders)
