[tool.poetry]
name = "neuropy"
version = "0.0.7"
description = "package is primarily developed for hippocampal recordings, but can also be used for general ephys data."
authors = ["Bapun Giri <bapung@umich.edu>", "Pho Hale <halechr@umich.edu>", "Nat Kinsky <nkinsky@umich.edu>"]
license = "GPL License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11" # Note: 3.11 is excluded by mamba. Otherwise it works fine.
hdf5storage = "^0.1.19"
python-benedict = "^0.28.3"
h5py = "^3.8.0"
numpy = "^1.20"
scipy = "^1.6"
pandas = "^1.5.3"
joblib = "^1.2.0"
hmmlearn = "^0.2.8"
scikit-learn = "^1.2.1"
scikit-posthocs = "^0.7.0"
ipywidgets = "^8.0.4"
seaborn = "^0.12.2"
pingouin = "^0.5.3"
panel = "^0.14.3"
matplotlib = "^3.6.3"
numba = {version = "^0.56.4", optional = true}
cupy = {version = "^11.5.0", optional = true}
tqdm = {version = "^4.64.1", optional = true}
portion = "^2.3.1"
dill = {version="==0.3.5.1", extras=["graph"]} #objgraph diagnostic tool
klepto = {version = "^0.2.2", optional = false} # {version = "^0.2.3", extras="archives"}
sqlalchemy = {version = "^2.0.2", optional = false}
pynapple = "^0.3.1" # {version = "^0.3.1", optional = false}

[tool.poetry.group.dev.dependencies]
pip = "^23.0"
ipdb = "^0.13.11"
dvc = {version = "^2.52.0", extras = ["gdrive"], optional = false}

[tool.poetry.extras]
gui = ["tqdm"]
acceleration = ["numba", "cupy"]
data_version_control = ["dvc"]
# data_io = ["pynapple"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

